Fix batchLogout bugs to pass integration test